--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="clock">
+        <h3>abdus salam</h3>
         <!-- clock stripe start -->
         <!-- <div class="stripe-area">
 
@@ -139,7 +140,7 @@
        
     </div>
 
-
+  
 
 
 
